# miband-HR-c

./: .gitignore  CMakeLists.txt  README.md  band.c  band.h  main.c  uuid.h
